# Tauri-x25

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: install-polkit-rule.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  commands.rs  config.rs  iface_stats.rs  lib.rs  main.rs  nethogs.rs  vnstat.rs
src/components/: AlertIndicators.vue  AlertsTab.vue  Dashboard.vue  HistoricalView.vue  PipView.vue  ProcessTable.vue  SessionFooter.vue  SettingsPanel.vue
