[package]
name = "tauri-x25"
version = "1.3.0"
description = "Lightweight Linux network monitor"
authors = ["Jorge"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tauri_x25_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
once_cell = "1"
dirs = "5"
regex = "1"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
